<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group>
    <item
        android:id="@+id/nav_fixture"
        android:icon="@drawable/nav_fixture"
        android:title="@string/nav_fixture" />
    <item
        android:id="@+id/nav_result"
        android:icon="@drawable/result"
        android:title="@string/nav_result" />
    <item
        android:id="@+id/nav_standings"
        android:icon="@drawable/nav_standings"
        android:title="@string/nav_standings" />
    <item
        android:id="@+id/nav_scorers"
        android:icon="@drawable/nav_scorers"
        android:title="@string/nav_scorers" />
  </group>

  <item android:title="@string/help">
    <menu>
      <item
          android:id="@+id/nav_about"
          android:icon="@drawable/user"
          android:title="@string/developers" />
    </menu>
  </item>

</menu>
